--- a/style.css
+++ b/style.css
@@ -10,21 +10,22 @@ Světle modrá - #407BFF1F
 
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #fafafa;
 }
 
 .maintext {
-  width: 500px;
-  height: 1657px;
-  background-color: #fafafa;
-  border: 1px solid #8b8b8b;
-  padding-left: 20px;
-  padding-right: 20px;
+  max-width: 1040px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-img {
+.header {
+  text-align: center;
+}
+
+.happytraveler {
   margin-top: 60px;
-  margin-left: 74.55px;
-  margin-right: 75.45px;
+  width: 100%;
 }
 
 h1, h2 {
@@ -62,20 +63,49 @@ button {
 
 .ikonky {
   background-color: white;
-  display: flex;
-  align-items: center;
   margin-bottom: 10px;
-  width: 460px;
-  height: 80px;
   font-size: 13px;
   border-radius: 5%;
+  display: flex;
+  align-items: center;
 }
 
 .ikonky img {
-  flex-grow: 1;
+  flex-basis: 10%;
+  padding: 10px;
 }
 
 .ikonky p {
+  flex-basis: 90%;
   text-align: left;
-  flex-grow: 4;
+}
+
+@media screen and (min-width: 640px) {
+
+.button {
+  display: inline;
+} 
+
+.horniikonky {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.dolniikonky {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.ikonky {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.ikonky p {
+  text-align: center;
+}
+
 }
