--- a/style.css
+++ b/style.css
@@ -28,8 +28,16 @@ body {
   width: 100%;
 }
 
+h1 {
+  font-size: 28px;
+}
+
 h1, h2 {
   text-align: center;
+}
+
+h2 {
+  font-size: 16px;
 }
 
 .line {
@@ -41,6 +49,7 @@ h1, h2 {
 p {
   text-align: center;
   color: #8B8B8B;
+  font-size: 16px;
 }
 
 button {
@@ -48,6 +57,7 @@ button {
   padding: 11px 30px;
   border-radius: 20px;
   margin: auto;
+  font-size: 14px;
 }
 
 .dobrodruzstvi {
@@ -68,16 +78,24 @@ button {
   border-radius: 5%;
   display: flex;
   align-items: center;
+  box-shadow: 5px 10px #407BFF1F ;
 }
 
 .ikonky img {
   flex-basis: 10%;
-  padding: 10px;
+  padding: 20px;
 }
 
 .ikonky p {
   flex-basis: 90%;
   text-align: left;
+  font-size: 13px;
+  padding: 0px 15px 15px 15px;
+}
+
+.part2,
+.part3 {
+  margin-top: 80px;
 }
 
 @media screen and (min-width: 640px) {
@@ -106,6 +124,64 @@ button {
 
 .ikonky p {
   text-align: center;
+}
+
+}
+
+@media screen and (min-width: 1100px) {
+
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.happytraveler {
+  order: 2;
+  max-width: 425px;
+}
+
+.headerleft {
+  order: 1;
+  text-align: left;
+  margin-right: 60px;
+}
+
+h1 {
+  text-align: left;
+}
+
+.header p {
+  text-align: left;
+}
+
+.line {
+  margin: 0%;
+}
+
+.part2,
+.part3 {
+  display: flex;
+}
+
+.horniikonky {
+  order: 1;
+  margin-right: 60px;
+}
+
+.righttext {
+  order: 2;
+}
+
+.righttext h2, p {
+  text-align: left;
+}
+
+.lefttext h2, p {
+  text-align: left;
+}
+
+.lefttext {
+  margin-right: 60px;
 }
 
 }
